2010-04-19	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* audio/Midi.cc: Fixed regression that caused timbres to not be uploaded
	  when changing audio options. Also, ensure correct timbres are loaded when
	  a song is started.
	* audio/Audio.cc: SFX cache is completelly flushed now when changing the
	  SFX packages, so that all SFX from the new package will be used effective
	  immediately (instead of requiring Exult to be restarted).

2010-04-17	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Patches applied:
	  #2843338 Use official min/max functions instead of proprietary ones
	  #2975693 fix for bug, Walking speed doesn't change to reflect fps

2010-04-12	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Bugs fixed:
	  #1500917 --disable-mt32emu doesn't disable building mt32emu
	  #2986215 SI: graphics glitch on "you must start a new game first."
	* configure.ac, audio/midi_drivers/Makefile.am: Bugfix for #1500917.
	* configure.ac, Makefile.am, content/*/*: The Exult mods can now be enabled
	  and built by passing the '--enable-mods' to ./configure; the mods are
	  installed to the default 'forgeofvirtue' and 'silverseed' mods dirs.
	  There are also MinGW makefiles for each of the mods as well. All of the
	  mod makefiles are generated by the content/makefile_builder.sh script;
	  since this script is probably non-portable, the generated output makefiles
	  have been included in the SVN dir for the time being.
	* Makefile.am: Do not link with libmt32emu.la if it is not built.
	* shapeid.cc, shapes/data_utils.h: Fixed crash on Mac OS X bundles if there
	  was no exult_bg.flx or exult_si.flx in external data directory.
	* configure.ac: Cleaning up tests for libogg, libvorbis, libvorbisfile,
	  libglade and libgnomeui. Changed AC_ARG_* to use AS_HELP_STRING. Fixed the
	  default case for --enable-long-long-warnings. Static builds in Mac OS X
	  now work by passing the following arguments to ./configure:
	    --enable-static-libraries